feat: implement Notizbuch application with GUI for note management and file storage